--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
     <properties>
         <spring.version>3.2.0.RELEASE</spring.version>
+        <log4j.version>2.0.1</log4j.version>
     </properties>
 
     <dependencies>
@@ -49,6 +50,21 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- log jars -->
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <!-- Test jars -->
 
         <dependency>
             <groupId>junit</groupId>
